objects/GLS_LicenceCondition__c.object
<CustomObject>
    <description>Construction Assist: Populated via the GLS Integration</description>
    <fields>
        <fullName>GLS_Description__c</fullName>
        <description>DFSI - Construction Assist</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLS_Licence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DFSI - Construction Assist</description>
        <label>Licence</label>
        <referenceTo>GLS_Licence__c</referenceTo>
        <relationshipLabel>Licence Conditions</relationshipLabel>
        <relationshipName>GLS_LicenceConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Description__c</fullName>
        <description>Used to capture the detail of the licence condition for Insurer Licence</description>
        <label>Description</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Display__c</fullName>
        <description>To be used on Licence Related List for IPMG</description>
        <formula>&quot;Type - &quot; + Text(IPM_Type__c) +  BR() +
&quot;Status - &quot; + TEXT( IPM_Status__c)</formula>
        <label>Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Status__c</fullName>
        <description>Used to identify the status of a licence condition for Insurer Licence</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Type__c</fullName>
        <description>Used to identify the type of licence conditions for Insurer Licence</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Special Condition</fullName>
                    <default>true</default>
                    <label>Special Condition</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Licence Condition</label>
    <nameField>
        <displayFormat>LCC-{00000}</displayFormat>
        <label>Licence Condition Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licence Conditions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>